--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: Xwdg2aIwLti9g6oqnwqYmP+Rwa+YZ7fMDeTdn92y2+kkvLdcQog0pjS7p3sAWAfEKBGiJtSVUOlsGSYZqRKUcmTcKbFxnEBt7rpCEQJYyYzITjL162za/DLG4vME5TqqUKVKeRTD682Kpecv/JrtVSipJ1WegyhGK+uwWgUNVtY=
+    secure: UQSqp+t7LCosCkS+BbRoMNUR7bXoOS4HuP0JpBwOxvlBOwnuGTLZxB9lUY4LTImIb+Bcf1dudUzBuk35D5kFyrPIwO6SK5YRnnqVDlJ4hYlR4vmm5nrcOWz9ySYzsYejSu/lAruwFyYWiSkC8tu9TPP4kVFI0TlViyGpWPxN0nY=
